Add submodule themes under oaktown_v1

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-travelify-theme"]
 	path = themes/hugo-travelify-theme
 	url = https://github.com/balaramadurai/hugo-travelify-theme.git
+[submodule "oaktown_v1/themes/hugo-travelify-theme"]
+	path = oaktown_v1/themes/hugo-travelify-theme
+	url = https://github.com/balaramadurai/hugo-travelify-theme.git
